@@ -18,7 +18,7 @@ import java.security.cert.*;
 public class JF {
 
   public static String getVersion() {
-    return "25.2";
+    return "26.0";
   }
 
   public static void sleep(int milli) {
